--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<h2 class="waring"><strong>DO NOT SPREAD TO THE PUBLIC</strong></h2>
 				<h3>供中文嘛欸通</h3>
 					<h4>Author : Ayuki 613021</h4>
-		<img src="images/intro.png" alt="Intro Image">
+		<img src="images/intro.png" width="960" height="540" alt="Intro Image">
 		<h1>Outline</h1>
 			<p>Project NNKIEH is a project held by 109th graduation student Ayuki.</p>
 		<h1>Who is the author あゆき ?</h1>
