Add something in head.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-Hant-TW">
 	<head>
+		<html lang>
+		<meta property="og:image" content=""> <!--Image preview for Facebook, add a png file!-->
+		<meta property="og:description" content=""> <!--Description preview for Facebook, let's type in Mandarin-->
+		<meta property="og:title" content="Project NNKIEH home page"> <!--Title preview for Facebook-->
+		
+		<meta name="twitter:title" content="Project NNKIEH home page"> <!--Title preview for Twitter-->
+		
 		<meta charset="utf-8">
+		<meta name="author" content="Ayuki">
+		<meta name="description" content="Project NNKIEH home page.
+		Project NNKIEH is a project to recreate National Nanke International Experimental High school, a high school
+		in Taiwan, Tainan, by using Minecraft.">
+		
 		<title>Project NNKIEH test page V0.1</title>
-		<link href="styles/style.css" rel="stylesheet" type="text/css">
+		<link rel="stylesheet" href="styles/style.css" type="text/css">
+		
+		<!--Change the following icon to Logo of Project NNKIEH!-->
+		<!-- third-generation iPad with high-resolution Retina display: -->
+		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://developer.mozilla.org/static/img/favicon144.png"> 
+		<!-- iPhone with high-resolution Retina display: -->
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://developer.mozilla.org/static/img/favicon114.png">
+		<!-- first- and second-generation iPad: -->
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://developer.mozilla.org/static/img/favicon72.png">
+		<!-- non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+		<link rel="apple-touch-icon-precomposed" href="https://developer.mozilla.org/static/img/favicon57.png">
+		<!-- basic favicon -->
+		<link rel="shortcut icon" href="https://developer.mozilla.org/static/img/favicon32.png">
 	</head>
 	<body>
 		<h1>Welcome to <strong>Project NNKIEH</strong> test page.</h1>
@@ -32,7 +56,14 @@
 				<li>怎麼沒有操場？沒有宿舍？當然是還沒蓋阿，至於會不會蓋，看我心情</li>
 				<li>高三四教室為啥那麼油？本來還更油欸，我換上Miku比較保護眼睛</li>
 				<li>其實FRC四樓的教室還沒蓋好啦，照片還沒要到，去問蔡汶鴻為什麼不看我訊息</li>
-				<li>講那麼多廢話，載點ㄋ拿來ㄛ  賀啦拿去 <a href="https://www.youtube.com/watch?v=072tU1tamd0">Download</a></li>
+				<li>講那麼多廢話，載點ㄋ拿來ㄛ  賀啦拿去 
+					<a title="Google Drive" target="_blank" href="https://www.youtube.com/watch?v=072tU1tamd0">Download</a></li>
+				<li>心得: <input type="text"></li>
+				<li>Miku &amp; Luka</li>
+				<!--這是註解嘿嘿你看不到-->
 			</ol>
+		
+		
+		<script src=""></script> <!--For js , add here.-->
 	</body>
 </html> 
