--- a/index.html
+++ b/index.html
@@ -38,9 +38,16 @@
 				<h3>供中文嘛欸通</h3>
 					<h4>Author : Ayuki 613021</h4>
 		<img src="images/intro.png" width="960" height="540" alt="Intro Image">
-		<h1>Outline</h1>
-			<p>Project NNKIEH is a project held by 109th graduation student Ayuki.</p>
-		<h1>Who is the author あゆき ?</h1>
+		<h2>Project NNKIEH 是什麼 ? What is Project NNKIEH?</h2>
+			<p> </p>
+			<h3>「Project NNKIEH」 是致力於使用Minecraft建造一個備份南科實中的計畫。</h3>
+			<p>南科實中不斷地在進化，為了留住這最美好的一刻，本計畫於2020年上旬以實地取景宣告開始進行，參考校園設計圖與實景照片進行1比1的建造，終於在2021年5月宣布階段性完工。</p>
+			<p>希望本計畫能讓不論是在COVID-19疫情下無法到校的同學在線上相聚，或是思鄉卻無法回校的校友敘舊。或發揮你的想像力，改造屬於自己的南科實中。</p>
+			
+			<h3>特色 Feature</h3>
+			<h3>歷史 History</h3>
+		
+		<h2>關於作者</h2>
 			<ul>
 				<li>Real Name        : Min-Yang Chiang</li>
 				<li>Student Number   : 613021</li>
@@ -49,7 +56,9 @@
 				<li>Best Friend      : Nayu</li>
 				<li>Favorite Idol    : Hatsune Miku</li>
 			</ul>
-		<h1>Some words</h1>
+		<h2>下載與安裝</h2>
+		<h2>注意事項</h2>
+		<h2>Some words</h2>
 			<ol>
 				<li>抱歉拖了那麼久啦，讓大家久等ㄌ</li>
 				<li>這是2020年的南科實中備份，跟現在不一樣的地方我是不會改ㄉ</li>
