--- a/index.html
+++ b/index.html
@@ -35,19 +35,40 @@
 			<h2 class="waring"><strong>DO NOT SPREAD TO THE PUBLIC</strong></h2>
 			<h2 class="waring"><strong>DO NOT SPREAD TO THE PUBLIC</strong></h2>
 			<h2 class="waring"><strong>DO NOT SPREAD TO THE PUBLIC</strong></h2>
-				<h3>供中文嘛欸通</h3>
-					<h4>Author : Ayuki 613021</h4>
-		<img src="images/intro.png" width="960" height="540" alt="Intro Image">
-		<h2>Project NNKIEH 是什麼 ? What is Project NNKIEH?</h2>
-			<p> </p>
+		
+		<h2>Short Cut</h2>
+			<ul>
+				<li><a href="index.html#what" title="Jump to this section"> 關於計畫 About Project NNKIEH </a></li>
+				<li><a href="index.html#author" title="Jump to this section"> 關於作者 About Author </a></li>
+				<li><a href="index.html#download" title="Jump to this section"> 下載與安裝 Download </a></li>
+				<li><a href="index.html#notice" title="Jump to this section"> 注意事項 Notice </a></li>
+				<li><a href="index.html#others" title="Jump to this section"> 其他 Others </a></li>
+			</ul>
+		<a href="https://www.youtube.com/watch?v=072tU1tamd0" title="Secret Link">
+			<img src="images/intro.png" width="960" height="540" alt="Intro Image">
+		</a>
+		<h2 id="what">關於計畫 About Project NNKIEH</h2>
+			<h3>國立南科國際實驗高級中學 National Nanke International Experimental High School</h3>
+			<p>四部一體 PV=FRC</p>
 			<h3>「Project NNKIEH」 是致力於使用Minecraft建造一個備份南科實中的計畫。</h3>
-			<p>南科實中不斷地在進化，為了留住這最美好的一刻，本計畫於2020年上旬以實地取景宣告開始進行，參考校園設計圖與實景照片進行1比1的建造，終於在2021年5月宣布階段性完工。</p>
-			<p>希望本計畫能讓不論是在COVID-19疫情下無法到校的同學在線上相聚，或是思鄉卻無法回校的校友敘舊。或發揮你的想像力，改造屬於自己的南科實中。</p>
+			<p>南科實中不斷地在進化，為了留住這最美好的一刻，本計畫於2020年上旬以實地取景宣告開始進行，參考校園設計圖與實景照片進行1比1的建造，最終在2021年5月宣布階段性完工。</p>
+			<p>本計畫希望能讓在COVID-19疫情下無法到校的同學在線上相聚，或是思鄉卻無法回校的校友敘舊。或發揮你的想像力，改造屬於自己的南科實中。</p>
 			
 			<h3>特色 Feature</h3>
+				<ul>
+					<li>清單文字</li>
+					<li>清單文字</li>
+					<li>清單文字</li>
+					<li>清單文字</li>
+					<li>清單文字</li>
+					<li>清單文字</li>
+					<li>etc..</li>
+				</ul>
 			<h3>歷史 History</h3>
+			<h3>貢獻 Credit</h3>
 		
-		<h2>關於作者</h2>
+		<h2 id="author">關於作者 About Author</h2>
+			<p><a href="aboutme.html">My Webpage</a></p>
 			<ul>
 				<li>Real Name        : Min-Yang Chiang</li>
 				<li>Student Number   : 613021</li>
@@ -56,9 +77,9 @@
 				<li>Best Friend      : Nayu</li>
 				<li>Favorite Idol    : Hatsune Miku</li>
 			</ul>
-		<h2>下載與安裝</h2>
-		<h2>注意事項</h2>
-		<h2>Some words</h2>
+		<h2 id="download">下載與安裝 Download</h2>
+		<h2 id="notice">注意事項 Notice</h2>
+		<h2 id="others">其他 Others</h2>
 			<ol>
 				<li>抱歉拖了那麼久啦，讓大家久等ㄌ</li>
 				<li>這是2020年的南科實中備份，跟現在不一樣的地方我是不會改ㄉ</li>
@@ -66,7 +87,7 @@
 				<li>高三四教室為啥那麼油？本來還更油欸，我換上Miku比較保護眼睛</li>
 				<li>其實FRC四樓的教室還沒蓋好啦，照片還沒要到，去問蔡汶鴻為什麼不看我訊息</li>
 				<li>講那麼多廢話，載點ㄋ拿來ㄛ  賀啦拿去 
-					<a title="Google Drive" target="_blank" href="https://www.youtube.com/watch?v=072tU1tamd0">Download</a></li>
+					<a title="Archive_20210522" download="Project_NNKIEH_archive20210522.zip" href="archive/Project_NNKIEH_archive20210522.zip">Download</a></li>
 				<li>心得: <input type="text"></li>
 				<li>Miku &amp; Luka</li>
 				<!--這是註解嘿嘿你看不到-->
