Description list in Credit part.

--- a/index.html
+++ b/index.html
@@ -66,6 +66,20 @@
 				</ul>
 			<h3>歷史 History</h3>
 			<h3>貢獻 Credit</h3>
+				<dl> <!--Description List-->
+					<dt>あゆき aka 江旻洋</dt>
+					<dd>計畫負責人、改編設計、建造、拍攝參考照片</dd>
+					<dt>なゆ aka 洪瑀彤</dt>
+					<dd>協助拍攝參考照片、校園實地測量、計畫支持</dd>
+					<dt>Hale Lin aka 林廷翰</dt>
+					<dd>拍攝參考照片、宣傳、計畫支持</dd>
+					<dt>張毓洪老師</dt>
+					<dd>提供校園詳細地圖、提供校園早期照片、分享校園早期故事、計畫支持</dd>
+					<dt>阿聖 aka 王凌聖</dt>
+					<dd>協助建造、協助拍攝參考照片、計畫支持</dd>
+					<dt>初音ミク &amp; 他的好朋友</dt>
+					<dd>BGM擔當</dd>
+				</dl>
 		
 		<h2 id="author">關於作者 About Author</h2>
 			<p><a href="aboutme.html">My Webpage</a></p>
