--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 		
 		<!--Change the following icon to Logo of Project NNKIEH!-->
 		<!-- third-generation iPad with high-resolution Retina display: -->
-		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://developer.mozilla.org/static/img/favicon144.png"> 
+		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/icon144.png"> 
 		<!-- iPhone with high-resolution Retina display: -->
-		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://developer.mozilla.org/static/img/favicon114.png">
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/icon114.png">
 		<!-- first- and second-generation iPad: -->
-		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://developer.mozilla.org/static/img/favicon72.png">
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/icon72.png">
 		<!-- non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
-		<link rel="apple-touch-icon-precomposed" href="https://developer.mozilla.org/static/img/favicon57.png">
+		<link rel="apple-touch-icon-precomposed" href="images/icon57.png">
 		<!-- basic favicon -->
-		<link rel="shortcut icon" href="https://developer.mozilla.org/static/img/favicon32.png">
+		<link rel="shortcut icon" href="images/icon128.png">
 	</head>
 	<body>
 		<h1>Welcome to <strong>Project NNKIEH</strong> test page.</h1>
