css block first add.

--- a/index.html
+++ b/index.html
@@ -30,13 +30,22 @@
 		<link rel="shortcut icon" href="images/icon128.png">
 	</head>
 	<body>
+		<header>
 		<h1>Welcome to <strong>Project NNKIEH</strong> test page.</h1>
 			<h2>This page is under construction.</h2>
 			<h2 class="waring"><strong>DO NOT SPREAD TO THE PUBLIC</strong></h2>
 			<h2 class="waring"><strong>DO NOT SPREAD TO THE PUBLIC</strong></h2>
 			<h2 class="waring"><strong>DO NOT SPREAD TO THE PUBLIC</strong></h2>
-		
+		</header>
+		<nav>
 		<h2>Short Cut</h2>
+			<span class="navContainer">
+				<span class="HomepageButton"> Homepage </span>
+				<a href="index.html#what" ><span class="AboutButton"> 關於計畫About Project NNKIEH </span></a>
+				<a href="index.html#author"><span class="AuthorButton"> 關於作者 About Author </span></a>
+				<a href="index.html#download" ><span class="DownloadButton"> 下載與安裝 Download </span></a>
+				<a href="index.html#others"><span class="OtherButton"> 其他 Others </span></a>
+			</span>
 			<ul>
 				<li><a href="index.html#what" title="Jump to this section"> 關於計畫 About Project NNKIEH </a></li>
 				<li><a href="index.html#author" title="Jump to this section"> 關於作者 About Author </a></li>
@@ -44,6 +53,8 @@
 				<li><a href="index.html#notice" title="Jump to this section"> 注意事項 Notice </a></li>
 				<li><a href="index.html#others" title="Jump to this section"> 其他 Others </a></li>
 			</ul>
+		</nav>
+		<main>
 		<a href="https://www.youtube.com/watch?v=072tU1tamd0" title="Secret Link">
 			<img src="images/intro.png" width="960" height="540" alt="Intro Image">
 		</a>
@@ -106,8 +117,18 @@
 				<li>Miku &amp; Luka</li>
 				<!--這是註解嘿嘿你看不到-->
 			</ol>
-		
-		
+		<aside>
+			<h2>最新消息</h2>
+			<ul>
+				<li>感謝110th畢業歌《拾光》MV使用本計畫，已公開!
+				<br>影片連結：<a href="https://www.youtube.com/watch?v=eHv-X9SKYOc" 
+				title="南科實中110th畢業歌《拾光》"Project NNKIEH" ver.">Youtube</a>
+			</ul>
+		</aside>
+		</main>
+		<footer>
+			<p>Hatsune Miku 是我們永遠的好朋友。</p>
+		</footer>
 		<script src=""></script> <!--For js , add here.-->
 	</body>
 </html> 
