--- a/index.html
+++ b/index.html
@@ -14,117 +14,48 @@
 		Project NNKIEH is a project to recreate National Nanke International Experimental High school, a high school
 		in Taiwan, Tainan, by using Minecraft.">
 		
-		<title>Project NNKIEH test page V0.2</title>
+		<title>Project NNKIEH Homepage</title>
 		<link rel="stylesheet" href="styles/style.css" type="text/css">
 		
-		<!--Change the following icon to Logo of Project NNKIEH!-->
-		<!-- third-generation iPad with high-resolution Retina display: -->
 		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/icon144.png"> 
-		<!-- iPhone with high-resolution Retina display: -->
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/icon114.png">
-		<!-- first- and second-generation iPad: -->
 		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/icon72.png">
-		<!-- non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
 		<link rel="apple-touch-icon-precomposed" href="images/icon57.png">
-		<!-- basic favicon -->
 		<link rel="shortcut icon" href="images/icon128.png">
 	</head>
 	<body>
 		<header>
-		<h1>Welcome to <strong>Project NNKIEH</strong> test page.</h1>
-			<h2>This page is under construction.</h2>
-			<h2 class="waring"><strong>DO NOT SPREAD TO THE PUBLIC</strong></h2>
-			<h2 class="waring"><strong>DO NOT SPREAD TO THE PUBLIC</strong></h2>
-			<h2 class="waring"><strong>DO NOT SPREAD TO THE PUBLIC</strong></h2>
+			<h1>Welcome to <strong>Project NNKIEH</strong> Homepage</h1>
+			<h2>這是Project NNKIEH的網站</h2>
 		</header>
 		<nav>
-		<h2>Short Cut</h2>
-			<span class="navContainer">
-				<span class="HomepageButton"> Homepage </span>
-				<a href="index.html#what" ><span class="AboutButton"> 關於計畫About Project NNKIEH </span></a>
-				<a href="index.html#author"><span class="AuthorButton"> 關於作者 About Author </span></a>
-				<a href="index.html#download" ><span class="DownloadButton"> 下載與安裝 Download </span></a>
-				<a href="index.html#others"><span class="OtherButton"> 其他 Others </span></a>
-			</span>
-			<ul>
-				<li><a href="index.html#what" title="Jump to this section"> 關於計畫 About Project NNKIEH </a></li>
-				<li><a href="index.html#author" title="Jump to this section"> 關於作者 About Author </a></li>
-				<li><a href="index.html#download" title="Jump to this section"> 下載與安裝 Download </a></li>
-				<li><a href="index.html#notice" title="Jump to this section"> 注意事項 Notice </a></li>
-				<li><a href="index.html#others" title="Jump to this section"> 其他 Others </a></li>
+			<ul class="links-list">
+				<li class="b_hp"><a href="index.html">首頁<br>Homepage</a></li>
+				<li class="b_or"><a href="about_project.html">關於計畫<br>About Project NNKIEH</a></li>
+				<li class="b_or"><a href="about_author.html">關於作者<br>About Author</a></li>
+				<li class="b_or"><a href="download.html">下載與安裝<br>Download</a></li>
+				<li class="b_or"><a href="others.html">其他<br>Others</a></li>
 			</ul>
 		</nav>
 		<main>
-		<a href="https://www.youtube.com/watch?v=072tU1tamd0" title="Secret Link">
-			<img src="images/intro.png" width="960" height="540" alt="Intro Image">
-		</a>
-		<h2 id="what">關於計畫 About Project NNKIEH</h2>
-			<h3>國立南科國際實驗高級中學 National Nanke International Experimental High School</h3>
-			<p>四部一體 PV=FRC</p>
-			<h3>「Project NNKIEH」 是致力於使用Minecraft建造一個備份南科實中的計畫。</h3>
-			<p>南科實中不斷地在進化，為了留住這最美好的一刻，本計畫於2020年上旬以實地取景宣告開始進行，參考校園設計圖與實景照片進行1比1的建造，最終在2021年5月宣布階段性完工。</p>
-			<p>本計畫希望能讓在COVID-19疫情下無法到校的同學在線上相聚，或是思鄉卻無法回校的校友敘舊。或發揮你的想像力，改造屬於自己的南科實中。</p>
-			
-			<h3>特色 Feature</h3>
-				<ul>
-					<li>清單文字</li>
-					<li>清單文字</li>
-					<li>清單文字</li>
-					<li>清單文字</li>
-					<li>清單文字</li>
-					<li>清單文字</li>
-					<li>etc..</li>
-				</ul>
-			<h3>歷史 History</h3>
-			<h3>貢獻 Credit</h3>
-				<dl> <!--Description List-->
-					<dt>あゆき aka 江旻洋</dt>
-					<dd>計畫負責人、改編設計、建造、拍攝參考照片</dd>
-					<dt>なゆ aka 洪瑀彤</dt>
-					<dd>協助拍攝參考照片、校園實地測量、計畫支持</dd>
-					<dt>Hale Lin aka 林廷翰</dt>
-					<dd>拍攝參考照片、宣傳、計畫支持</dd>
-					<dt>張毓洪老師</dt>
-					<dd>提供校園詳細地圖、提供校園早期照片、分享校園早期故事、計畫支持</dd>
-					<dt>阿聖 aka 王凌聖</dt>
-					<dd>協助建造、協助拍攝參考照片、計畫支持</dd>
-					<dt>初音ミク &amp; 他的好朋友</dt>
-					<dd>BGM擔當</dd>
-				</dl>
-		
-		<h2 id="author">關於作者 About Author</h2>
-			<p><a href="aboutme.html">My Webpage</a></p>
+		<div class="intro">
+		<h1>南科實中110th畢業歌《拾光》<br>"Project NNKIEH" ver.</h1>
+			<div class="video">
+				<iframe width="960" height="540" src="https://www.youtube.com/embed/eHv-X9SKYOc" 
+				title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+				gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
+		</div>
+		<hr>
+		<div class="news">
+		<h1>最新消息</h1>
 			<ul>
-				<li>Real Name        : Min-Yang Chiang</li>
-				<li>Student Number   : 613021</li>
-				<li>Graduate Class   : 312</li>
-				<li>Homeroom Teacher : Song.</li>
-				<li>Best Friend      : Nayu</li>
-				<li>Favorite Idol    : Hatsune Miku</li>
-			</ul>
-		<h2 id="download">下載與安裝 Download</h2>
-		<h2 id="notice">注意事項 Notice</h2>
-		<h2 id="others">其他 Others</h2>
-			<ol>
-				<li>抱歉拖了那麼久啦，讓大家久等ㄌ</li>
-				<li>這是2020年的南科實中備份，跟現在不一樣的地方我是不會改ㄉ</li>
-				<li>怎麼沒有操場？沒有宿舍？當然是還沒蓋阿，至於會不會蓋，看我心情</li>
-				<li>高三四教室為啥那麼油？本來還更油欸，我換上Miku比較保護眼睛</li>
-				<li>其實FRC四樓的教室還沒蓋好啦，照片還沒要到，去問蔡汶鴻為什麼不看我訊息</li>
-				<li>講那麼多廢話，載點ㄋ拿來ㄛ  賀啦拿去 
-					<a title="Archive_20210522" download="Project_NNKIEH_archive20210522.zip" href="archive/Project_NNKIEH_archive20210522.zip">Download</a></li>
-				<li>心得: <input type="text"></li>
-				<li>Miku &amp; Luka</li>
-				<!--這是註解嘿嘿你看不到-->
-			</ol>
-		<aside>
-			<h2>最新消息</h2>
-			<ul>
-				<li>感謝110th畢業歌《拾光》MV使用本計畫，已公開!
+				<li>Project NNKIEH的網頁正在如火如荼趕工中...</li>
+				<li>感謝110th畢業歌《拾光》MV使用本計畫製作，現正熱映中！
 				<br>影片連結：<a href="https://www.youtube.com/watch?v=eHv-X9SKYOc" 
-				title="南科實中110th畢業歌《拾光》"Project NNKIEH" ver.">Youtube</a>
+				title="南科實中110th畢業歌《拾光》"Project NNKIEH" ver.">Youtube</a></list>
 			</ul>
-		</aside>
+		</div>
 		</main>
 		<footer>
 			<p>Hatsune Miku 是我們永遠的好朋友。</p>
