frame of other pages and css fix.

--- a/about_project.html
+++ b/about_project.html
@@ -17,22 +17,16 @@
 		<title>About Project NNKIEH</title>
 		<link rel="stylesheet" href="styles/style.css" type="text/css">
 		
-		<!--Change the following icon to Logo of Project NNKIEH!-->
-		<!-- third-generation iPad with high-resolution Retina display: -->
 		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/icon144.png"> 
-		<!-- iPhone with high-resolution Retina display: -->
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/icon114.png">
-		<!-- first- and second-generation iPad: -->
 		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/icon72.png">
-		<!-- non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
 		<link rel="apple-touch-icon-precomposed" href="images/icon57.png">
-		<!-- basic favicon -->
 		<link rel="shortcut icon" href="images/icon128.png">
 	</head>
 	<body>
 		<header>
-			<h1>Welcome to <strong>Project NNKIEH</strong> Homepage</h1>
-			<h2>我是副標題</h2>
+			<h1><strong>Project NNKIEH</strong></h1>
+			<h2>關於本計畫 About Project NNKIEH</h2>
 		</header>
 		<nav>
 			<ul class="links-list">
@@ -44,17 +38,18 @@
 			</ul>
 		</nav>
 		<main>
-		<a href="https://www.youtube.com/watch?v=072tU1tamd0" title="Secret Link">
-			<img src="images/intro.png" width="960" height="540" alt="Intro Image">
-		</a>
-		<h2 id="what">關於計畫 About Project NNKIEH</h2>
-			<h3>國立南科國際實驗高級中學 National Nanke International Experimental High School</h3>
-			<p>四部一體 PV=FRC</p>
-			<h3>「Project NNKIEH」 是致力於使用Minecraft建造一個備份南科實中的計畫。</h3>
-			<p>南科實中不斷地在進化，為了留住這最美好的一刻，本計畫於2020年上旬以實地取景宣告開始進行，參考校園設計圖與實景照片進行1比1的建造，最終在2021年5月宣布階段性完工。</p>
-			<p>本計畫希望能讓在COVID-19疫情下無法到校的同學在線上相聚，或是思鄉卻無法回校的校友敘舊。或發揮你的想像力，改造屬於自己的南科實中。</p>
+			<div class="inside">
 			
-			<h3>特色 Feature</h3>
+			<h1 id="what">什麼是Project NNKIEH ?</h1>
+			<h1>Put a Picutre here.</h1>
+			
+				<h2>「Project NNKIEH」 是致力於使用Minecraft建造一個備份南科實中的計畫。</h2>
+				
+				<p>南科實中不斷地在進化，為了留住這最美好的一刻，本計畫於2020年上旬以實地取景宣告開始進行，
+				參考校園設計圖與實景照片進行1比1的建造，最終在2021年5月宣布階段性完工。<br>
+				本計畫希望能讓在COVID-19疫情下無法到校的同學在線上相聚，或是思鄉卻無法回校的校友敘舊。
+				或發揮你的想像力，改造屬於自己的南科實中。</p>
+			<h2>特色 Feature</h2>
 				<ul>
 					<li>清單文字</li>
 					<li>清單文字</li>
@@ -64,8 +59,7 @@
 					<li>清單文字</li>
 					<li>etc..</li>
 				</ul>
-			<h3>歷史 History</h3>
-			<h3>貢獻 Credit</h3>
+			<h2>貢獻 Credit</h2>
 				<dl> <!--Description List-->
 					<dt>あゆき aka 江旻洋</dt>
 					<dd>計畫負責人、改編設計、建造、拍攝參考照片</dd>
@@ -80,40 +74,12 @@
 					<dt>初音ミク &amp; 他的好朋友</dt>
 					<dd>BGM擔當</dd>
 				</dl>
-		
-		<h2 id="author">關於作者 About Author</h2>
-			<p><a href="aboutme.html">My Webpage</a></p>
-			<ul>
-				<li>Real Name        : Min-Yang Chiang</li>
-				<li>Student Number   : 613021</li>
-				<li>Graduate Class   : 312</li>
-				<li>Homeroom Teacher : Song.</li>
-				<li>Best Friend      : Nayu</li>
-				<li>Favorite Idol    : Hatsune Miku</li>
-			</ul>
-		<h2 id="download">下載與安裝 Download</h2>
-		<h2 id="notice">注意事項 Notice</h2>
-		<h2 id="others">其他 Others</h2>
-			<ol>
-				<li>抱歉拖了那麼久啦，讓大家久等ㄌ</li>
-				<li>這是2020年的南科實中備份，跟現在不一樣的地方我是不會改ㄉ</li>
-				<li>怎麼沒有操場？沒有宿舍？當然是還沒蓋阿，至於會不會蓋，看我心情</li>
-				<li>高三四教室為啥那麼油？本來還更油欸，我換上Miku比較保護眼睛</li>
-				<li>其實FRC四樓的教室還沒蓋好啦，照片還沒要到，去問蔡汶鴻為什麼不看我訊息</li>
-				<li>講那麼多廢話，載點ㄋ拿來ㄛ  賀啦拿去 
-					<a title="Archive_20210522" download="Project_NNKIEH_archive20210522.zip" href="archive/Project_NNKIEH_archive20210522.zip">Download</a></li>
-				<li>心得: <input type="text"></li>
-				<li>Miku &amp; Luka</li>
-				<!--這是註解嘿嘿你看不到-->
-			</ol>
-		<aside>
-			<h2>最新消息</h2>
-			<ul>
-				<li>感謝110th畢業歌《拾光》MV使用本計畫，已公開!
-				<br>影片連結：<a href="https://www.youtube.com/watch?v=eHv-X9SKYOc" 
-				title="南科實中110th畢業歌《拾光》"Project NNKIEH" ver.">Youtube</a>
-			</ul>
-		</aside>
+		<hr>	
+			<h1>相片集 Album</h1>
+		<hr>
+			<h1>關於南科實中 About NNKIEH</h1>
+			<p>全名為：國立南科國際實驗高級中學(National Nanke International Experimental High School)</p>
+		</div class="inside">
 		</main>
 		<footer>
 			<p>Hatsune Miku 是我們永遠的好朋友。</p>
