--- a/others.html
+++ b/others.html
@@ -25,8 +25,8 @@
 	</head>
 	<body>
 		<header>
-			<h1>Welcome to <strong>Project NNKIEH</strong> !</h1>
-			<h2>首頁 Homepage</h2>
+			<h1><strong>Project NNKIEH</strong></h1>
+			<h2>其他 Others</h2>
 		</header>
 		<nav>
 			<ul class="links-list">
@@ -47,7 +47,7 @@
 			</div>
 		</div>
 		<hr>
-		<div class="inside">
+		<div class="news">
 		<h1>最新消息</h1>
 			<ul>
 				<li>Project NNKIEH的網頁正在如火如荼趕工中...</li>
