--- a/about_author.html
+++ b/about_author.html
@@ -25,8 +25,8 @@
 	</head>
 	<body>
 		<header>
-			<h1>Welcome to <strong>Project NNKIEH</strong> !</h1>
-			<h2>首頁 Homepage</h2>
+			<h1><strong>Project NNKIEH</strong></h1>
+			<h2>關於作者 About Author</h2>
 		</header>
 		<nav>
 			<ul class="links-list">
@@ -38,23 +38,31 @@
 			</ul>
 		</nav>
 		<main>
-		<div class="intro">
-		<h1>南科實中110th畢業歌《拾光》<br>"Project NNKIEH" ver.</h1>
-			<div class="video">
-				<iframe width="960" height="540" src="https://www.youtube.com/embed/eHv-X9SKYOc" 
-				title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
-				gyroscope; picture-in-picture" allowfullscreen></iframe>
-			</div>
-		</div>
-		<hr>
 		<div class="inside">
-		<h1>最新消息</h1>
+		<h2 id="author">關於作者 About Author</h2>
+			<p><a href="aboutme.html">My Webpage</a></p>
 			<ul>
-				<li>Project NNKIEH的網頁正在如火如荼趕工中...</li>
-				<li>感謝110th畢業歌《拾光》MV使用本計畫製作，現正熱映中！
-				<br>影片連結：<a href="https://www.youtube.com/watch?v=eHv-X9SKYOc" 
-				title="南科實中110th畢業歌《拾光》"Project NNKIEH" ver.">Youtube</a>
+				<li>Real Name        : Min-Yang Chiang</li>
+				<li>Student Number   : 613021</li>
+				<li>Graduate Class   : 312</li>
+				<li>Homeroom Teacher : Song.</li>
+				<li>Best Friend      : Nayu</li>
+				<li>Favorite Idol    : Hatsune Miku</li>
 			</ul>
+		
+		<h2 id="others">其他 Others</h2>
+			<ol>
+				<li>抱歉拖了那麼久啦，讓大家久等ㄌ</li>
+				<li>這是2020年的南科實中備份，跟現在不一樣的地方我是不會改ㄉ</li>
+				<li>怎麼沒有操場？沒有宿舍？當然是還沒蓋阿，至於會不會蓋，看我心情</li>
+				<li>高三四教室為啥那麼油？本來還更油欸，我換上Miku比較保護眼睛</li>
+				<li>其實FRC四樓的教室還沒蓋好啦，照片還沒要到，去問蔡汶鴻為什麼不看我訊息</li>
+				<li>講那麼多廢話，載點ㄋ拿來ㄛ  賀啦拿去 
+					<a title="Archive_20210522" download="Project_NNKIEH_archive20210522.zip" href="archive/Project_NNKIEH_archive20210522.zip">Download</a></li>
+				<li>心得: <input type="text"></li>
+				<li>Miku &amp; Luka</li>
+				<!--這是註解嘿嘿你看不到-->
+			</ol>
 		</div>
 		</main>
 		<footer>
