--- a/download.html
+++ b/download.html
@@ -25,8 +25,8 @@
 	</head>
 	<body>
 		<header>
-			<h1>Welcome to <strong>Project NNKIEH</strong> !</h1>
-			<h2>首頁 Homepage</h2>
+			<h1><strong>Project NNKIEH</strong></h1>
+			<h2>下載與安裝 Download &amp Install</h2>
 		</header>
 		<nav>
 			<ul class="links-list">
@@ -38,23 +38,10 @@
 			</ul>
 		</nav>
 		<main>
-		<div class="intro">
-		<h1>南科實中110th畢業歌《拾光》<br>"Project NNKIEH" ver.</h1>
-			<div class="video">
-				<iframe width="960" height="540" src="https://www.youtube.com/embed/eHv-X9SKYOc" 
-				title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
-				gyroscope; picture-in-picture" allowfullscreen></iframe>
-			</div>
-		</div>
-		<hr>
 		<div class="inside">
-		<h1>最新消息</h1>
-			<ul>
-				<li>Project NNKIEH的網頁正在如火如荼趕工中...</li>
-				<li>感謝110th畢業歌《拾光》MV使用本計畫製作，現正熱映中！
-				<br>影片連結：<a href="https://www.youtube.com/watch?v=eHv-X9SKYOc" 
-				title="南科實中110th畢業歌《拾光》"Project NNKIEH" ver.">Youtube</a>
-			</ul>
+			<h1 id="download">下載與安裝 Download</h1>
+			<hr>
+			<h1 id="notice">注意事項 Notice</h1>
 		</div>
 		</main>
 		<footer>
