--- a/download.html
+++ b/download.html
@@ -39,9 +39,32 @@
 		</nav>
 		<main>
 		<div class="inside">
-			<h1 id="download">下載與安裝 Download</h1>
+		<p>若想下載並安裝到Minecraft中，你可以參考本頁，或者你已經會了。</p>
+			<h1 id="download">下載 Download</h1>
+			下載連結：
+			<a title="Project_NNKIEH_Ver.Hotpot" href="archive/Project_NNKIEH_release1.0.zip">
+			ProjectNNKIEH Release1.0.zip (4.19MB)</a></li>	
+			</p>
+			<hr>
+			<h1 id="install">如何安裝 Install</h1>
+				<p>就如同一般的Minecraft存檔安裝方式。<p>
+				<ol>
+					<li>下載地圖檔，解壓縮得到"Project NNKIEH"資料夾。</li>
+					<li>開啟Minecraft，本地圖檔不需要模組，原版即可。關於版本，見注意事項。</li>
+					<li>在主畫面中，選擇「選項...」 → 「資源包...」 → 「開啟資源包資料夾」，開啟這個資料夾。</li>
+					<li>回到這個資料夾的「上一層資料夾」，找到"saves"資料夾，將第一步的資料夾放入"saves"資料夾。</li>
+					<li>在Minecraft中選擇單人遊戲，應該就可以看見地圖了。</li>
+				</ol>
 			<hr>
 			<h1 id="notice">注意事項 Notice</h1>
+				<ul>
+					<li>本地圖檔使用1.12.2版建造，您可以使用更高的版本，但本人無法其擔保相容性。</li>
+					<li>本計畫圖片拍攝時使用光影模組，原版看到的景色可能與照片有差異。</li>
+					<li>本計畫使用的光影模組是SEUS。安裝方式與連結在此恕不提供。</li>
+					<li>請勿將此計畫用於犯罪或恐嚇等使人不愉快的用途。</li>
+					<li>請不要直接分享載點，分享時請分享此網頁。</li>
+					<li>若您有二次創作的需求，我還在想這部分要怎麼處理，如果方便請與我聯繫。</li>
+				</ul>
 		</div>
 		</main>
 		<footer>
