page ver0.5 online

--- a/about_author.html
+++ b/about_author.html
@@ -4,9 +4,9 @@
 		<html lang>
 		<meta property="og:image" content=""> <!--Image preview for Facebook, add a png file!-->
 		<meta property="og:description" content=""> <!--Description preview for Facebook, let's type in Mandarin-->
-		<meta property="og:title" content="About Author"> <!--Title preview for Facebook-->
+		<meta property="og:title" content="Author - Project NNKIEH"> <!--Title preview for Facebook-->
 		
-		<meta name="twitter:title" content="About Author"> <!--Title preview for Twitter-->
+		<meta name="twitter:title" content="Author - Project NNKIEH"> <!--Title preview for Twitter-->
 		
 		<meta charset="utf-8">
 		<meta name="author" content="Ayuki">
@@ -14,7 +14,7 @@
 		Project NNKIEH is a project to recreate National Nanke International Experimental High school, a high school
 		in Taiwan, Tainan, by using Minecraft.">
 		
-		<title>About Author</title>
+		<title>Author - Project NNKIEH</title>
 		<link rel="stylesheet" href="styles/style.css" type="text/css">
 		
 		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/icon144.png"> 
@@ -102,6 +102,8 @@
 		<h2 id="others">雜談 Epilogue</h2>
 			<ol>
 				<li>抱歉拖了那麼久，讓大家久等了，一方面是忙也有一方面是懶惰，還有追求完美的壞習慣。以下回答一些自問自答。</li>
+				<li>Q: 網頁很醜，而且用手機看會破圖。 A:很抱歉傷害大家的眼睛，因為這是我第一次做網頁QAQ，
+				未來對於CSS與HTML有更多知識後會漸漸進行改版，<strong>目前就請大家先用電腦並設定網頁大小130%。</strong></li>
 				<li>Q: 怎麼不蓋改建的生物教室? A: 這是2020年的南科實中備份，我選擇留住南科實中在我心中最美的時候。</li>
 				<li>Q: 操場、宿舍、體育館呢? A: 當然是還沒蓋囉，短期內沒有規劃要建造。</li>
 				<li>Q: 高三四教室裡面怎麼有軟體，好油喔。 A: 其實上一屆本來還更油，我換上Miku比較保護眼睛。</li>
@@ -112,13 +114,14 @@
 				<li>有想要我回答的問題，請在「其他」頁填寫回饋表單~</li>
 				<li>Q: 學校是不是有點變形? A: 沒錯~因為實際的學校各棟建築不是互相垂直的
 				，為了在Minecraft內呈現，必須做出一些取捨，因此圖書館那邊會比實際大一點，
-				高三到圖書館的路也被拉長了。
+				高三到圖書館的路也被拉長了。</li>
+				<li>Q: 做網頁要錢嗎? A: 本網頁使用 <a href="https://pages.github.com/">Github pages</a>，免費大推，還能順便學git。</li>
 				<!--這是註解嘿嘿你看不到-->
 			</ol>
 		</div>
 		</main>
 		<footer>
-			<p>Hatsune Miku 是我們永遠的好朋友。</p>
+			<p>Hatsune Miku 是我們永遠的好朋友。20210602</p>
 		</footer>
 		<script src=""></script> <!--For js , add here.-->
 	</body>
