--- a/download.html
+++ b/download.html
@@ -4,9 +4,9 @@
 		<html lang>
 		<meta property="og:image" content=""> <!--Image preview for Facebook, add a png file!-->
 		<meta property="og:description" content=""> <!--Description preview for Facebook, let's type in Mandarin-->
-		<meta property="og:title" content="Project NNKIEH home page"> <!--Title preview for Facebook-->
+		<meta property="og:title" content="Download - Project NNKIEH"> <!--Title preview for Facebook-->
 		
-		<meta name="twitter:title" content="Project NNKIEH home page"> <!--Title preview for Twitter-->
+		<meta name="twitter:title" content="Download - Project NNKIEH"> <!--Title preview for Twitter-->
 		
 		<meta charset="utf-8">
 		<meta name="author" content="Ayuki">
@@ -14,7 +14,7 @@
 		Project NNKIEH is a project to recreate National Nanke International Experimental High school, a high school
 		in Taiwan, Tainan, by using Minecraft.">
 		
-		<title>Project NNKIEH Homepage</title>
+		<title>Download - Project NNKIEH</title>
 		<link rel="stylesheet" href="styles/style.css" type="text/css">
 		
 		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/icon144.png"> 
@@ -68,7 +68,7 @@
 		</div>
 		</main>
 		<footer>
-			<p>Hatsune Miku 是我們永遠的好朋友。</p>
+			<p>Hatsune Miku 是我們永遠的好朋友。20210602</p>
 		</footer>
 		<script src=""></script> <!--For js , add here.-->
 	</body>
