--- a/index.html
+++ b/index.html
@@ -46,19 +46,20 @@
 				gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 		</div>
-		<hr>
 		<div class="inside">
+		<hr>
 		<h1>最新消息</h1>
 			<ul>
-				<li>Project NNKIEH的網頁正在如火如荼趕工中...</li>
-				<li>感謝110th畢業歌《拾光》MV使用本計畫製作，現正熱映中！
+				<li>2021/06/02 Project NNKIEH 正式上線啦!</li>
+				<li>2021/05/31 Project NNKIEH 的網頁正在如火如荼趕工中...</li>
+				<li>2021/05/29 感謝110th畢業歌《拾光》MV使用本計畫製作，現正熱映中！
 				<br>影片連結：<a href="https://www.youtube.com/watch?v=eHv-X9SKYOc" 
 				title="南科實中110th畢業歌《拾光》"Project NNKIEH" ver.">Youtube</a>
 			</ul>
 		</div>
 		</main>
 		<footer>
-			<p>Hatsune Miku 是我們永遠的好朋友。</p>
+			<p>Hatsune Miku 是我們永遠的好朋友。20210602</p>
 		</footer>
 		<script src=""></script> <!--For js , add here.-->
 	</body>
