--- a/others.html
+++ b/others.html
@@ -4,9 +4,9 @@
 		<html lang>
 		<meta property="og:image" content=""> <!--Image preview for Facebook, add a png file!-->
 		<meta property="og:description" content=""> <!--Description preview for Facebook, let's type in Mandarin-->
-		<meta property="og:title" content="Project NNKIEH home page"> <!--Title preview for Facebook-->
+		<meta property="og:title" content="Others - Project NNKIEH"> <!--Title preview for Facebook-->
 		
-		<meta name="twitter:title" content="Project NNKIEH home page"> <!--Title preview for Twitter-->
+		<meta name="twitter:title" content="Others - Project NNKIEH"> <!--Title preview for Twitter-->
 		
 		<meta charset="utf-8">
 		<meta name="author" content="Ayuki">
@@ -14,7 +14,7 @@
 		Project NNKIEH is a project to recreate National Nanke International Experimental High school, a high school
 		in Taiwan, Tainan, by using Minecraft.">
 		
-		<title>Project NNKIEH Homepage</title>
+		<title>Others - Project NNKIEH</title>
 		<link rel="stylesheet" href="styles/style.css" type="text/css">
 		
 		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/icon144.png"> 
@@ -39,26 +39,27 @@
 		</nav>
 		<main>
 		<div class="intro">
-		<h1>南科實中110th畢業歌《拾光》<br>"Project NNKIEH" ver.</h1>
-			<div class="video">
-				<iframe width="960" height="540" src="https://www.youtube.com/embed/eHv-X9SKYOc" 
-				title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
-				gyroscope; picture-in-picture" allowfullscreen></iframe>
-			</div>
+			<h1>Project NNKIEH 暫時 Logo</h1>
+			<img src="images/Logo_temp.png" width="300">
+			<p>(根本就是南科實中校徽，對我知道XD，但我真的沒有設計能力QQ)</p>
+			<p>(另外，有人知道校徽是誰設計的嗎?)</p>
 		</div>
+		<div class="inside">
 		<hr>
-		<div class="news">
-		<h1>最新消息</h1>
-			<ul>
-				<li>Project NNKIEH的網頁正在如火如荼趕工中...</li>
-				<li>感謝110th畢業歌《拾光》MV使用本計畫製作，現正熱映中！
-				<br>影片連結：<a href="https://www.youtube.com/watch?v=eHv-X9SKYOc" 
-				title="南科實中110th畢業歌《拾光》"Project NNKIEH" ver.">Youtube</a>
-			</ul>
+			<h1>回饋與建議 Feedback</h1>
+			<p>建議、鼓勵、敲碗、心得、問題回報、聯繫、詢問、抱怨... 想對作者或本計畫說些什麼，都歡迎~
+			<br><br>
+			<a title="Google 表單" href="https://forms.gle/de6C3UkawX8Yhd1q6">回饋表單</a>
+			<br><br>
+			(有建設性或有趣的回饋，有可能會以匿名形式放在作者頁的雜談。)
+			</p>
+			
+			<img src="images/oka.png">
+			<div class="desc"><p>南科實中之丘</p></div>
 		</div>
 		</main>
 		<footer>
-			<p>Hatsune Miku 是我們永遠的好朋友。</p>
+			<p>Hatsune Miku 是我們永遠的好朋友。 20210602</p>
 		</footer>
 		<script src=""></script> <!--For js , add here.-->
 	</body>
