--- a/about_project.html
+++ b/about_project.html
@@ -4,9 +4,9 @@
 		<html lang>
 		<meta property="og:image" content=""> <!--Image preview for Facebook, add a png file!-->
 		<meta property="og:description" content=""> <!--Description preview for Facebook, let's type in Mandarin-->
-		<meta property="og:title" content="About Project NNKIEH"> <!--Title preview for Facebook-->
+		<meta property="og:title" content="About - Project NNKIEH"> <!--Title preview for Facebook-->
 		
-		<meta name="twitter:title" content="About Project NNKIEH"> <!--Title preview for Twitter-->
+		<meta name="twitter:title" content="About - Project NNKIEH"> <!--Title preview for Twitter-->
 		
 		<meta charset="utf-8">
 		<meta name="author" content="Ayuki">
@@ -14,7 +14,7 @@
 		Project NNKIEH is a project to recreate National Nanke International Experimental High school, a high school
 		in Taiwan, Tainan, by using Minecraft.">
 		
-		<title>About Project NNKIEH</title>
+		<title>About - Project NNKIEH</title>
 		<link rel="stylesheet" href="styles/style.css" type="text/css">
 		
 		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/icon144.png"> 
@@ -42,13 +42,21 @@
 			
 			<h1 id="what">什麼是Project NNKIEH ?</h1>
 			<img src="images/intro.png" width="960">
-			
+				
+				<br>
 				<h2>「Project NNKIEH」 是致力於使用Minecraft建造一個備份南科實中的計畫。</h2>
 				
-				<!--<p>南科實中不斷地在進化，為了留住這最美好的一刻，本計畫於2020年上旬以實地取景宣告開始進行，
-				參考校園設計圖與實景照片進行1比1的建造，最終在2021年5月宣布階段性完工。<br>
-				本計畫希望能讓在COVID-19疫情下無法到校的同學在線上相聚，或是思鄉卻無法回校的校友敘舊。
-				或發揮你的想像力，改造屬於自己的南科實中。</p>-->
+				<p>
+				在Minecraft確實重現的虛擬南科實中，
+				來源於創作者確實的走過，利用360°全景相機紀錄每一個你還未注意到的角落，
+				這個既熟悉又陌生的校園在等待你來探索。
+				<br><br>2021年，因疫情影響，不論是在校生還是校友都因此無法回到學校交流與敘舊。
+				2020年初，Project NNKIEH開始進行，在2021年終於宣告階段性的完成，成為大家可以相遇的平台。
+				1:1等比例建造的虛擬校園就如同真實校園一般，藏著許多屬於我們的回憶小彩蛋，
+				甚至還存在著繼續發展擴充的可塑性，每個人都可以發揮更大的想像力，繼續創造屬於自己的南科故事！
+				</p>
+				<h2><strong>因視覺而感念，因存在過而記憶著。諸君，盡情的跑班吧！</strong></h2>
+			<hr>
 			<h2>特色 Feature</h2>
 				<ul>
 					<li>依照真實比例建造，彷彿置身校園。</li>
@@ -89,6 +97,7 @@
 						<dd>李傑庭</dd>
 						<dd>簡芷嫺</dd>
 						<dd>張毓洪老師</dd>
+						<dd>蔡汶鴻老師</dd>
 					<dt>校園地圖提供</dt>
 						<dd>張毓洪老師</dd>
 					<dt>校園測量協力</dt>
@@ -106,16 +115,40 @@
 						<dd>初音ミク &amp 他的好朋友</dd>
 					<dt>網頁製作</dt>
 						<dd>あゆき(江旻洋)</dd>
+					<dt>計畫介紹文字</dt>
+						<dd>Hale Lin(林廷翰)</dd>
 					<dt>特別感謝</dt>
 						<dd>王志誦老師</dd>
 						<dd>蘇聖雄老師</dd>
 						<dd>南科實中全體同仁</dd>
 						<dd>Mojang Studios</dd>
-					<dt>如有疏漏或錯誤，請來信指教，感謝!</dt>
 				</dl>
+				<p>如有疏漏或錯誤，請來信指教，感謝!</p>
 		<hr>	
 			<h1>關於南科實中 About NNKIEH</h1>
-			<p>全名為：國立南科國際實驗高級中學(National Nanke International Experimental High School)</p>
+			<h2>國立南科國際實驗高級中學 National Nanke International Experimental High School </h2>
+			
+			<p>為一所位於台南科學園區內的實驗中學，創校的目的在於提供科學園區員工子女優質的教育環境，
+			並為南科與地方發展奠定教育基礎。
+			<br><br>
+			本校前身為臺南縣立南科國民中學與南科國民小學，
+			南科國中自86年籌設，南科國小自87年籌設，由呂昌道先生擔任籌備主任及校長。
+			民國95年8月1日改制成為「國立南科國際實驗高級中學」，整併原南科國中、
+			國小，分別設立國小部和國中部，由戴旭璋博士擔任首任校長。97學年起設立高中部，南科實中成為四部共榮的實驗學校，
+			現任校長為秦文智先生。
+			<br><br>
+			目前學校包括高中部12班、國中部23班、國小部44班、雙語部12班，為國內鮮有的四部一體的體制。
+			校園腹地寬廣占地10.2公頃；校園建築設計新穎，處處展現對環境保護及生態之重視。
+			繼國中部校舍獲頒「綠建築」標章後，於2010年完工的高中部校舍，更榮耀2座「鑽石級綠建築標章」之殊榮，
+			成為全國第一所榮獲此項標章的學校，提供師生一個節能減碳、綠意盎然、生態豐富的學習環境。各項建築設計符合教育理念，
+			高中部及雙語部採用專科教室跑班方式，讓教師充分發揮學科教室的功能，提升學習效果。
+			<br><br>
+			全校設置兩座圖書館，並設立遠見國際會議廳、資訊科技實驗室、創意工廠等空間，提供學生各項活動、會議、科學研究之場所。
+			寬廣的運動場、多功能體育館、網球場等設施，提供學生寬敞舒適的運動空間。校園公共藝術「迎向未來」及「巨人花粉」，
+			分別由知名藝術家賴純純及曾英棟創作，趣味的造型意涵深遠，融入本校設校精神，亦為校園增添濃厚的藝術氣息。
+			</p>
+			
+			<p>※ 以上文字節錄自 南科實中沿革 - 國立南科國際實驗高級中學官網</p>
 		<hr>
 		<h1>相片集 Album</h1>
 		<div class="Album">
@@ -192,7 +225,7 @@
 		</div>
 		</main>
 		<footer>
-			<p>Hatsune Miku 是我們永遠的好朋友。</p>
+			<p>Hatsune Miku 是我們永遠的好朋友。20210602</p>
 		</footer>
 		<script src=""></script> <!--For js , add here.-->
 	</body>
