--- a/about_author.html
+++ b/about_author.html
@@ -116,6 +116,7 @@
 				，為了在Minecraft內呈現，必須做出一些取捨，因此圖書館那邊會比實際大一點，
 				高三到圖書館的路也被拉長了。</li>
 				<li>Q: 做網頁要錢嗎? A: 本網頁使用 <a href="https://pages.github.com/">Github pages</a>，免費大推，還能順便學git。</li>
+				<li>Q: 有計畫開server嗎? A: 你是說NNKIEH Server嗎，我名字想好了，但還在猶豫。</li>
 				<!--這是註解嘿嘿你看不到-->
 			</ol>
 		</div>
