--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 		</nav>
 		<main>
 		<div class="intro">
+		<strong><font color="red"><h1>祝110級同學 🎉畢業快樂🎉</h1></font></strong>
 		<h1>南科實中110th畢業歌《拾光》<br>"Project NNKIEH" ver.</h1>
 			<div class="video">
 				<iframe width="960" height="540" src="https://www.youtube.com/embed/eHv-X9SKYOc" 
