--- a/others.html
+++ b/others.html
@@ -2,8 +2,9 @@
 <html lang="zh-Hant-TW">
 	<head>
 		<html lang>
-		<meta property="og:image" content=""> <!--Image preview for Facebook, add a png file!-->
-		<meta property="og:description" content=""> <!--Description preview for Facebook, let's type in Mandarin-->
+		<meta property="og:image" content="images/intro.png"> <!--Image preview for Facebook, add a png file!-->
+		<meta property="og:description" content="Project NNKIEH is a project to recreate National Nanke International Experimental High school, a high school
+		in Taiwan, Tainan, by using Minecraft."> <!--Description preview for Facebook, let's type in Mandarin-->
 		<meta property="og:title" content="Others - Project NNKIEH"> <!--Title preview for Facebook-->
 		
 		<meta name="twitter:title" content="Others - Project NNKIEH"> <!--Title preview for Twitter-->
