--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
 				title="南科實中110th畢業歌《拾光》"Project NNKIEH" ver.">Youtube</a>
 			</ul>
 		</div>
+		<div id="sfc77a2jgq8fmcryn822zu1sh3mempuxqcc"></div>
+		<script type="text/javascript" src="https://counter6.stat.ovh/private/counter.js?c=77a2jgq8fmcryn822zu1sh3mempuxqcc&down=async" async>
+		</script><noscript><a href="https://www.freecounterstat.com" title="page counter">
+		<img src="https://counter6.stat.ovh/private/freecounterstat.php?c=77a2jgq8fmcryn822zu1sh3mempuxqcc" border="0" title="page counter" alt="page counter">
+		</a></noscript>
 		</main>
 		<footer>
 			<p>Hatsune Miku 是我們永遠的好朋友。20210602</p>
