credit list fix 2

--- a/about_project.html
+++ b/about_project.html
@@ -80,7 +80,7 @@
 						<dd>あゆき(江旻洋)</dd>
 					<dt>建造</dt>
 						<dd>あゆき(江旻洋)</dd>
-						<dd>王凌聖</dd>
+						<dd>喵古米爾</dd>
 					<dt>攝影取材</dt>
 						<dd>あゆき(江旻洋)</dd>
 						<dd>Hale Lin(林廷翰)</dd>
