--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 		<hr>
 		<h1>最新消息</h1>
 			<ul>
+				<li>2021/07/01 NNKIEH_Land 伺服器 籌備中</li>
 				<li>2021/06/02 Project NNKIEH 正式上線啦!</li>
 				<li>2021/05/31 Project NNKIEH 的網頁正在如火如荼趕工中...</li>
 				<li>2021/05/29 感謝110th畢業歌《拾光》MV使用本計畫製作，現正熱映中！
