--- a/others.html
+++ b/others.html
@@ -57,6 +57,29 @@
 			
 			<img src="images/oka.png">
 			<div class="desc"><p>南科實中之丘</p></div>
+		<hr>
+			<h1>多人伺服器 Server</h1>
+			<p>專屬於南科人的Minecraft Server。在這裡沒有陌生人，大家都是熟悉的南科人。稱為 <strong>NNKIEH_Land。</strong></p>
+			<p>目前屬於測試階段，不持續開機。正式開幕日期為 7/4(日)。</p>
+			<h2>資訊 Info</h2>
+			<ul>
+				<li>Server IP：nnkiehland.ddns.net</li>
+				<li>開機時間：每日 7:00 至 22:00 (暑假暫定)</li>
+				<li>主機位置：我家，在南科實中附近</li>
+				<li>負責人：あゆき(Ayuki)</li>
+				<li>白名單：有，請見下一段</li>
+				<li>類型：原版生存</li>
+				<li>Discord群組：<a title="開啟Discord" href="https://discord.gg/rHUFs9AAwv">邀請連結</a></li>
+			</ul>
+			<h2>如何加入 How to Join</h2>
+			<p>只要你是南科實中相關人士，不論是幼稚園、國小、國中、高中、雙語部、FRC的在校生，或是畢業生甚至是教職人員，都符合加入資格。
+			欲加入者請透過回饋表單、Discord或其他方式與 あゆき(江旻洋) 聯繫，我們會盡快為您服務。</p>
+			<h2>規則 Rules</h2>
+			<ol>
+				<li>允許在主城建築(南科實中建築)建造或破壞自己建造的方塊，但請勿隨意破壞。</li>
+				<li>垃圾不落地，回收請確實分類，衛生組關心您</li>
+				<li>基本上沒有規則，請大家和平包容友善對待他人。</li>
+			</ol>
 		</div>
 		</main>
 		<footer>
