add warning text
1.17 != 1.17.1

--- a/others.html
+++ b/others.html
@@ -64,7 +64,7 @@
 			<h2>資訊 Info</h2>
 			<ul>
 				<li>Server IP：nnkiehland.ddns.net</li>
-				<li>版本：1.17</li>
+				<li>版本：1.17 (注意：1.17.1與1.17不相容)</li>
 				<li>開機時間：不固定，有人想玩就會開。</li>
 				<li>主機位置：我家，在南科實中附近</li>
 				<li>負責人：あゆき(Ayuki)</li>
