--- a/about_author.html
+++ b/about_author.html
@@ -118,6 +118,7 @@
 				高三到圖書館的路也被拉長了。</li>
 				<li>Q: 做網頁要錢嗎? A: 本網頁使用 <a href="https://pages.github.com/">Github pages</a>，免費大推，還能順便學git。</li>
 				<li>Q: 有計畫開server嗎? A: 你是說NNKIEH Server嗎，我名字想好了，但還在猶豫。</li>
+				<li>Q: 聽說你最近在學git，學得如何 A:有夠たのしい</li>
 				<!--這是註解嘿嘿你看不到-->
 			</ol>
 		</div>
