--- a/download.html
+++ b/download.html
@@ -5,9 +5,9 @@
 		<meta property="og:image" content="images/intro.png"> <!--Image preview for Facebook, add a png file!-->
 		<meta property="og:description" content="Project NNKIEH is a project to recreate National Nanke International Experimental High school, a high school
 		in Taiwan, Tainan, by using Minecraft."> <!--Description preview for Facebook, let's type in Mandarin-->
-		<meta property="og:title" content="Download - Project NNKIEH"> <!--Title preview for Facebook-->
+		<meta property="og:title" content="Project NNKIEH home page"> <!--Title preview for Facebook-->
 		
-		<meta name="twitter:title" content="Download - Project NNKIEH"> <!--Title preview for Twitter-->
+		<meta name="twitter:title" content="Project NNKIEH home page"> <!--Title preview for Twitter-->
 		
 		<meta charset="utf-8">
 		<meta name="author" content="Ayuki">
@@ -15,62 +15,163 @@
 		Project NNKIEH is a project to recreate National Nanke International Experimental High school, a high school
 		in Taiwan, Tainan, by using Minecraft.">
 		
-		<title>Download - Project NNKIEH</title>
+		<title>Project NNKIEH Homepage</title>
+		<link rel="stylesheet" href="styles/header.css" type="text/css">
 		<link rel="stylesheet" href="styles/style.css" type="text/css">
-		
+		<link rel="stylesheet" href="styles/common.css" type="text/css">
+
 		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/icon144.png"> 
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/icon114.png">
 		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/icon72.png">
 		<link rel="apple-touch-icon-precomposed" href="images/icon57.png">
 		<link rel="shortcut icon" href="images/icon128.png">
 	</head>
-	<body>
-		<header>
-			<h1><strong>Project NNKIEH</strong></h1>
-			<h2>下載與安裝 Download &amp Install</h2>
-		</header>
-		<nav>
-			<ul class="links-list">
-				<li class="b_hp"><a href="index.html">首頁<br>Homepage</a></li>
-				<li class="b_or"><a href="about_project.html">關於計畫<br>About Project NNKIEH</a></li>
-				<li class="b_or"><a href="about_author.html">關於作者<br>About Author</a></li>
-				<li class="b_or"><a href="download.html">下載與安裝<br>Download</a></li>
-				<li class="b_or"><a href="others.html">其他<br>Others</a></li>
+
+<body class="common_body">
+
+
+<header id="header">
+	<nav id="nav">
+	<p class="header_logo">
+		<a href="index.html">Project NNKIEH</a>
+	</p>
+	<div class="header_menu">	
+		<ul class="header_menu_hide">
+			<li class="menu_button">
+				<a href="about_project.html">
+					<p class="icon">
+					關於<br>About
+					</p>
+				</a>
+			</li>
+			<li class="menu_button">
+				<a href="album.html">
+					<p class="icon">
+					相簿<br>Album</p>
+				</a>
+			</li>
+			<li class="menu_button">
+				<a href="download.html">
+					<p class="icon">
+					下載與安裝<br>Download</p>
+				</a>
+			</li>
+			<li class="menu_button">
+				<a href="about_author.html">
+					<p class="icon">
+					作者<br>Author</p>
+				</a>
+			</li>
+		</ul>
+		<div class="header_sidemenu">
+			<ul class="language_menu">
+				<li>
+					<p class="language_off_menu" onclick="clickLanguageMenu()">Language</p>
+					<ul class="language_menu_inner" id="language_list">
+						<li><a href="">繁體中文</a></li>
+						<li><a href="">日本語</a></li>
+					</ul>
+				</li>
 			</ul>
-		</nav>
-		<main>
-		<div class="inside">
-		<p>若想下載並安裝到Minecraft中，你可以參考本頁，或者你已經會了。</p>
-			<h1 id="download">下載 Download</h1>
-			下載連結：
-			<a title="Project_NNKIEH_Ver.Hotpot" href="archive/Project_NNKIEH_release1.0.zip">
-			ProjectNNKIEH Release1.0.zip (4.19MB)</a></li>	
-			</p>
-			<hr>
-			<h1 id="install">如何安裝 Install</h1>
-				<p>就如同一般的Minecraft存檔安裝方式。<p>
-				<ol>
-					<li>下載地圖檔，解壓縮得到"Project NNKIEH"資料夾。</li>
-					<li>開啟Minecraft，本地圖檔不需要模組，原版即可。關於版本，見注意事項。</li>
-					<li>在主畫面中，選擇「選項...」 → 「資源包...」 → 「開啟資源包資料夾」，開啟這個資料夾。</li>
-					<li>回到這個資料夾的「上一層資料夾」，找到"saves"資料夾，將第一步的資料夾放入"saves"資料夾。</li>
-					<li>在Minecraft中選擇單人遊戲，應該就可以看見地圖了。</li>
-				</ol>
-			<hr>
-			<h1 id="notice">注意事項 Notice</h1>
-				<ul>
-					<li>本地圖檔使用1.12.2版建造，您可以使用更高的版本，但本人無法其擔保相容性。</li>
-					<li>本計畫圖片拍攝時使用光影模組，原版看到的景色可能與照片有差異。</li>
-					<li>本計畫使用的光影模組是SEUS。安裝方式與連結在此恕不提供。</li>
-					<li>請勿將此計畫用於犯罪或恐嚇等使人不愉快的用途。</li>
-					<li>請不要直接分享載點，分享時請分享此網頁。</li>
-					<li>若您有二次創作的需求，我還在想這部分要怎麼處理，如果方便請與我聯繫。</li>
-				</ul>
 		</div>
-		</main>
-		<footer>
-			<p>Hatsune Miku 是我們永遠的好朋友。20210602</p>
-		</footer>
-		<script src=""></script> <!--For js , add here.-->
-	</body>
+	
+	</div>
+	</nav>
+</header>
+
+
+<div class="pagetitle">
+	<h1>下載與安裝</h1>
+	<h2>Download</h2>
+</div>
+
+<section class="common_section">
+	<div class="wrap">
+		<div class="content">	
+			<h3>下載</h3>
+			<p>下載連結：
+			<a title="" href="archive/Project_NNKIEH_release1.0.zip">
+				ProjectNNKIEH Release1.0.zip (4.19MB)</a>
+			(適用版本：1.12.2)
+			</p>
+			<p>祝 玩得開心</p>
+			<h3>注意事項</h3>
+			<ul>
+				<li>禁止未經許可的轉載下載點。分享時請分享本網頁。</li>
+				<li>本地圖檔使用1.12.2版建造，可以使用更高的版本遊玩，但地圖內的電燈與鐵門開關會失效。</li>
+				<li>拍攝時使用的光影包是SEUS PTGI。安裝方式與連結在此恕不提供。</li>
+			</ul>
+		</div>
+	</div>
+</section>
+
+<footer>
+	<div class="wrap">
+		<h3>原作</h3>
+		<div class="name_list">
+		<span>劉木賢建築師事務所-國立南科國際實驗高級中學　高中部校舍</span>
+		</div>
+		<h3>專案負責人</h3>
+		<div class="name_list">
+		<span>江旻洋</span>
+		</div>
+		<h3>協力</h3>
+		<div class="name_list">
+			<span>江旻洋</span>
+			/
+			<span>喵古米爾</span>
+			/
+			<span>Hale Lin(林廷翰)</span>
+			/
+			<span>ナユ</span>
+			/
+			<span>莊曜嘉</span>
+			/
+			<span>劉昀姍老師</span>
+			/
+			<span>Morgan(楊淞甫)</span>
+			/
+			<span>Satsuki</span>
+			/
+			<span>李傑庭</span>
+			/
+			<span>簡芷嫺</span>
+			/
+			<span>張毓洪老師</span>
+			/
+			<span>蔡汶鴻老師</span>
+			/
+			<span>楊念瑤</span>
+			/
+			<span>江旻修學長</span>
+			/
+			<span>初音ミク & her friends</span>
+		</div>
+		<h3>特別感謝</h3>
+		<div class="name_list">
+			<span>王志誦老師</span>
+			/
+			<span>蘇聖雄老師</span>
+			/
+			<span>南科實中全體同仁</span>
+			/
+			<span>Mojang Studios</span>
+		</div>
+		<p>Hatsune Miku 是我們永遠的好朋友。20230330</p>
+	</div>
+	
+</footer>
+
+<script>
+	function clickLanguageMenu(){
+		var x = document.getElementById("language_list");
+		if(x.style.display == "block"){
+			x.style.display = "none";
+		}else{
+			x.style.display = "block";
+		}
+	}
+</script> <!--For js , add here.-->
+
+</body>
 </html> 
