--- a/about_author.html
+++ b/about_author.html
@@ -2,12 +2,12 @@
 <html lang="zh-Hant-TW">
 	<head>
 		<html lang>
-		<meta property="og:image" content="images/me.png"> <!--Image preview for Facebook, add a png file!-->
+		<meta property="og:image" content="images/intro.png"> <!--Image preview for Facebook, add a png file!-->
 		<meta property="og:description" content="Project NNKIEH is a project to recreate National Nanke International Experimental High school, a high school
 		in Taiwan, Tainan, by using Minecraft."> <!--Description preview for Facebook, let's type in Mandarin-->
-		<meta property="og:title" content="Author - Project NNKIEH"> <!--Title preview for Facebook-->
+		<meta property="og:title" content="Project NNKIEH home page"> <!--Title preview for Facebook-->
 		
-		<meta name="twitter:title" content="Author - Project NNKIEH"> <!--Title preview for Twitter-->
+		<meta name="twitter:title" content="Project NNKIEH home page"> <!--Title preview for Twitter-->
 		
 		<meta charset="utf-8">
 		<meta name="author" content="Ayuki">
@@ -15,117 +15,171 @@
 		Project NNKIEH is a project to recreate National Nanke International Experimental High school, a high school
 		in Taiwan, Tainan, by using Minecraft.">
 		
-		<title>Author - Project NNKIEH</title>
+		<title>Project NNKIEH Homepage</title>
+		<link rel="stylesheet" href="styles/header.css" type="text/css">
 		<link rel="stylesheet" href="styles/style.css" type="text/css">
-		
+		<link rel="stylesheet" href="styles/common.css" type="text/css">
+
 		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/icon144.png"> 
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/icon114.png">
 		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/icon72.png">
 		<link rel="apple-touch-icon-precomposed" href="images/icon57.png">
 		<link rel="shortcut icon" href="images/icon128.png">
 	</head>
-	<body>
-		<header>
-			<h1><strong>Project NNKIEH</strong></h1>
-			<h2>關於作者 About Author</h2>
-		</header>
-		<nav>
-			<ul class="links-list">
-				<li class="b_hp"><a href="index.html">首頁<br>Homepage</a></li>
-				<li class="b_or"><a href="about_project.html">關於計畫<br>About Project NNKIEH</a></li>
-				<li class="b_or"><a href="about_author.html">關於作者<br>About Author</a></li>
-				<li class="b_or"><a href="download.html">下載與安裝<br>Download</a></li>
-				<li class="b_or"><a href="others.html">其他<br>Others</a></li>
+
+<body class="common_body">
+
+
+<header id="header">
+	<nav id="nav">
+	<p class="header_logo">
+		<a href="index.html">Project NNKIEH</a>
+	</p>
+	<div class="header_menu">	
+		<ul class="header_menu_hide">
+			<li class="menu_button">
+				<a href="about_project.html">
+					<p class="icon">
+					關於<br>About
+					</p>
+				</a>
+			</li>
+			<li class="menu_button">
+				<a href="album.html">
+					<p class="icon">
+					相簿<br>Album</p>
+				</a>
+			</li>
+			<li class="menu_button">
+				<a href="download.html">
+					<p class="icon">
+					下載與安裝<br>Download</p>
+				</a>
+			</li>
+			<li class="menu_button">
+				<a href="about_author.html">
+					<p class="icon">
+					作者<br>Author</p>
+				</a>
+			</li>
+		</ul>
+		<div class="header_sidemenu">
+			<ul class="language_menu">
+				<li>
+					<p class="language_off_menu" onclick="clickLanguageMenu()">Language</p>
+					<ul class="language_menu_inner" id="language_list">
+						<li><a href="">繁體中文</a></li>
+						<li><a href="">日本語</a></li>
+					</ul>
+				</li>
 			</ul>
-		</nav>
-		<main>
-		<div class="inside">
-		<h1 id="author">我是誰?</h1>
-		<img src="images/me.png" width="960">
-		<!--<p><a href="aboutme.html">My Webpage</a></p>!-->
-		<h2>關於我 About me</h2>
-			<p>嗨，感謝你關注這個計畫。 我是這個計畫的負責人與主要製作者，還有本網頁的製作者。</p>
-			<p>我是南科實中109級畢業生 江旻洋，你可以叫我あゆき(Ayuki)。目前就讀於國立清華大學資工系一年級。喜歡打電動和寫程式，
-			特別喜歡初音ミク(初音未來)，最近正在學習HTML和CSS，請多多指教。</p>
-		<h2>計畫緣起 Origin</h2>
-			<p>大家可能會認為這個計畫與疫情有關，疫情確實是一個動力，但本計畫其實可以追朔到2019年的夏天。事情是這樣的...
-			<br><br>
-			身為南科實中15年的老屁股，從幼稚園一路讀到高中畢業，見證了高中部建築的過程。15年來南科和南科實中
-			都改變了很多，有很多好東西都消失了，例如高中部的木棧道被拆光、教室一間一間被變成機器人的形狀、地圖與標語被
-			陽光漂白... 如果能像檔案一樣備份就好了。在某一個離學測還很久的週末，我開始憑印象在Minecraft裡建造校園，從隨便蓋蓋
-			到逐漸開始收集參考照片，就是在這個週末產生了「蓋學校」這個大膽的想法。由於當時使用的是還沒有混凝土的1.7.10版，
-			蓋出來只有格局像而已，外觀真的不能看，於是這個想法就連同只有兩三面牆的地圖檔放棄了。
-			<br><br>
-			現在大家看見的版本是從2020年學測後用1.12.2版開始建造的，抱著「想為這間學校留下點什麼」的情懷認真地開始這個計畫。起初先在
-			校園各處用全景相機拍照，一到四樓每一段走廊都不放過，為的就是忠實的在電腦中複製一份可以閒逛的南科實中。為求精確，
-			ナユ協助我測量各地方的長寬，也透過張毓洪老師的協助得到精確的校園輪廓圖，就這樣每天一點點的獨自建造起1比1的虛擬
-			學校...
-			<br><br>
-			時間到了暑假，有了考完指考的阿聖幫忙，還有大家的鼓勵(壓力)，建造的進度加速許多，終於在8月中旬完成建築本體。
-			本來這樣就要公開了，但總覺得還少了些什麼，於是我開始種樹，從兩個中庭開始，由於Minecraft內建的樹不夠高也不真實，
-			每一顆樹都是一塊一塊蓋出來的，也參考真實的位置、高度和樹葉的顏色與比例去建造，如此才能還原從教室往外看的感覺，
-			就這樣蓋到上大學，斷斷續續的蓋一天算一天。
-			<br><br>
-			種樹工程一直到2021年初才完成。本來這樣就要公開了，但總覺得還少了些什麼，除了建造地下室之外，作為一個教育場所，
-			照明是不可或缺的，於是用了一個多月的時間讓全校的電燈都可以開關。時間到了三月，本計畫已經持續超過一年，但老毛病
-			就是常常會覺得哪裡不夠好，空蕩蕩的校園沒有活力，根本就是疫情校園的備份，於是又開始對每間教室進行裝潢，由於當初
-			拍攝的照片幾乎都是走廊，由無法抽身回學校拍照，我請林廷翰同學(內線?)幫我拍攝校園的細節，除了布置課桌椅外也用地圖框
-			的方式將依些書法畫或牆上的圖案掛入虛擬的學校中。
-			<br><br>
-			2021年5月22日，隨著最後一間教室的裝潢完畢，Project NNKIEH 正式宣告竣工。這時候也接到林廷翰學弟(內線w)的合作邀約，
-			為110級畢業歌製作特別版MV。為了計畫發表的順利，我決定製作一個本計畫的網頁，但CSS沒基礎HTML也只摸過一點點，基本上
-			這個網頁會很醜就是這個原因。本網頁預計於6月4日左右公開，到時候再來看我有沒有跳票。
-			<br><br>
-			</p>
-			
-		<h2>基本資料 Info</h1>
-			<ul>
-				<li>姓名：あゆき(江旻洋)</li>
-				<li>畢業高中：南科實中</li>
-				<li>畢業級：109th</li>
-				<li>畢業班：312</li>
-				<li>導師：王志誦</li>
-				<br>
-				<li>大學：國立清華大學</li>
-				<li>系級：資工系 大一</li>
-			</ul>
-		<h2>聯絡資訊 Contact</h2>
-			<p>如果你對本計畫有任何疑問或建議，歡迎填寫在「其他」分頁中的回饋表單，或直接連絡我，感謝。</p>
-			<div class="contact_twitter">
-				<p>Twitter  <a href="https://twitter.com/pause582">@pause582</a><p>
-			</div>
-			<div class="contact_facebook">
-				<p>Facebook <a href="https://www.facebook.com/pause582/">江旻洋 | Facebook</a><p>
-			</div>
-			<div class="contact_email">
-				<p>Email <a href="mailto:s109062208miku@gapp.nthu.edu.tw"> s109062208miku@gapp.nthu.edu.tw</a><p>
-			</div>
-		<h2 id="others">雜談 Epilogue</h2>
-			<ol>
-				<li>抱歉拖了那麼久，讓大家久等了，一方面是忙也有一方面是懶惰，還有追求完美的壞習慣。以下回答一些自問自答。</li>
-				<li>Q: 網頁很醜，而且用手機看會破圖。 A:很抱歉傷害大家的眼睛，因為這是我第一次做網頁QAQ，
-				未來對於CSS與HTML有更多知識後會漸漸進行改版，<strong>目前就請大家先用電腦並設定網頁大小130%。</strong></li>
-				<li>Q: 怎麼不蓋改建的生物教室? A: 這是2020年的南科實中備份，我選擇留住南科實中在我心中最美的時候。</li>
-				<li>Q: 操場、宿舍、體育館呢? A: 當然是還沒蓋囉，短期內沒有規劃要建造。</li>
-				<li>Q: 高三四教室裡面怎麼有軟體，好油喔。 A: 其實上一屆本來還更油，我換上Miku比較保護眼睛。</li>
-				<li>Q: 講那麼多廢話，載點呢?? A: 好啦拿去。
-					<a title="Project_NNKIEH_Ver.Hotpot" href="https://www.youtube.com/watch?v=072tU1tamd0">Download</a></li>
-				<li>下載與安裝在隔壁頁喔</li>
-				<li>Q: 初音是哪一個動漫的? A: 他不是動漫，他是電子樂器。</li>
-				<li>有想要我回答的問題，請在「其他」頁填寫回饋表單~</li>
-				<li>Q: 學校是不是有點變形? A: 沒錯~因為實際的學校各棟建築不是互相垂直的
-				，為了在Minecraft內呈現，必須做出一些取捨，因此圖書館那邊會比實際大一點，
-				高三到圖書館的路也被拉長了。</li>
-				<li>Q: 做網頁要錢嗎? A: 本網頁使用 <a href="https://pages.github.com/">Github pages</a>，免費大推，還能順便學git。</li>
-				<li>Q: 有計畫開server嗎? A: 你是說NNKIEH Server嗎，我名字想好了，但還在猶豫。</li>
-				<li>Q: 聽說你最近在學git，學得如何 A:有夠たのしい</li>
-				<!--這是註解嘿嘿你看不到-->
-			</ol>
 		</div>
-		</main>
-		<footer>
-			<p>Hatsune Miku 是我們永遠的好朋友。20210602</p>
-		</footer>
-		<script src=""></script> <!--For js , add here.-->
-	</body>
+	
+	</div>
+	</nav>
+</header>
+
+
+<div class="pagetitle">
+	<h1>關於作者</h1>
+	<h2>About Author</h2>
+</div>
+
+<section class="common_section">
+	<div class="wrap">
+		<div class="content">	
+			<h2>我是誰</h2>
+			<hr>
+			<div class="photo">
+				<img src="images/me.png">
+			</div>
+			
+			<h3>自我介紹</h3>
+			<ul>
+				<li>姓名：江旻洋 / あゆき(Ayuki)</li>
+				<li>出生年月：2002年1月</li>
+				<li>職位：國立清華大學資訊工程學系 學生</li>
+			</ul>
+			<p>很喜歡Miku，尤其是雪初音2018丹頂鶴。</p>
+			<p>南科實中資深老屁股，從附設幼稚園讀到高中畢業。</p>
+			<p>2022年9月至2023年8月在北海道大學工學部交換留學。</p>
+			<h3>聯絡資訊</h3>
+			<p>Twitter <a href="https://twitter.com/pause582">@pause582</a></p>
+			<p>Facebook  <a href="https://www.facebook.com/pause582/">江旻洋 | Facebook</a> (活動休止)</p>
+			<p>Email  <a href="mailto:s109062208miku@gapp.nthu.edu.tw">s109062208miku@gapp.nthu.edu.tw</a></p>
+			<h3>歡迎來信建議與指教。</h3>
+			<h3>みくみくにしてあげる♪</h3>
+		</div>
+	</div>
+</section>
+
+<footer>
+	<div class="wrap">
+		<h3>原作</h3>
+		<div class="name_list">
+		<span>劉木賢建築師事務所-國立南科國際實驗高級中學　高中部校舍</span>
+		</div>
+		<h3>專案負責人</h3>
+		<div class="name_list">
+		<span>江旻洋</span>
+		</div>
+		<h3>協力</h3>
+		<div class="name_list">
+			<span>江旻洋</span>
+			/
+			<span>喵古米爾</span>
+			/
+			<span>Hale Lin(林廷翰)</span>
+			/
+			<span>ナユ</span>
+			/
+			<span>莊曜嘉</span>
+			/
+			<span>劉昀姍老師</span>
+			/
+			<span>Morgan(楊淞甫)</span>
+			/
+			<span>Satsuki</span>
+			/
+			<span>李傑庭</span>
+			/
+			<span>簡芷嫺</span>
+			/
+			<span>張毓洪老師</span>
+			/
+			<span>蔡汶鴻老師</span>
+			/
+			<span>楊念瑤</span>
+			/
+			<span>江旻修學長</span>
+			/
+			<span>初音ミク & her friends</span>
+		</div>
+		<h3>特別感謝</h3>
+		<div class="name_list">
+			<span>王志誦老師</span>
+			/
+			<span>蘇聖雄老師</span>
+			/
+			<span>南科實中全體同仁</span>
+			/
+			<span>Mojang Studios</span>
+		</div>
+		<p>Hatsune Miku 是我們永遠的好朋友。20230330</p>
+	</div>
+	
+</footer>
+
+<script>
+	function clickLanguageMenu(){
+		var x = document.getElementById("language_list");
+		if(x.style.display == "block"){
+			x.style.display = "none";
+		}else{
+			x.style.display = "block";
+		}
+	}
+</script> <!--For js , add here.-->
+
+</body>
 </html> 
