fix bug in index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				</a>
 			</li>
 			<li class="menu_button">
-				<a href="others.html">
+				<a href="album.html">
 					<p class="icon">
 					相簿<br>Album</p>
 				</a>
